--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,19 @@
     <title>GUDLFT Registration</title>
 </head>
 <body>
-    <h1>Welcome to the GUDLFT Registration Portal!</h1>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+        <ul class=flashes style="width: 100%; background-color: red; color: white">
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+        </ul>
+    {% endif %}
+    {% endwith %}
     Please enter your secretary email to continue:
     <form action="showSummary" method="post">
         <label for="email">Email:</label>
+  
         <input type="email" name="email" id=""/>
         <button type="submit">Enter</button>
     </form>
