bugg nb de point actualise 2

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -15,7 +15,10 @@
     {% endif %}
     {% endwith %}
     <h1>Welcome to the GUDLFT Registration Portal!</h1>
-    
+    <h3>Competitions:</h3>
+
+
+
     Please enter your secretary email to continue:
     <form action="showSummary" method="post">
 
@@ -24,8 +27,5 @@
         <button type="submit">Enter</button>
 
     </form>
-    {% if error %}
-        {{error}}
-    {% endif %}
 </body>
 </html>
