--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -5,16 +5,16 @@
     <title>Summary | GUDLFT Registration</title>
 </head>
 <body>
-        <h2>Welcome, {{club['email']}} </h2><a href="{{url_for('logout')}}">Logout</a>
-
-    {% with messages = get_flashed_messages()%}
+    {% with messages = get_flashed_messages() %}
     {% if messages %}
-        <ul>
-       {% for message in messages %}
-            <li>{{message}}</li>
+        <ul class=flashes style="width: 100%; background-color: rgb(5, 197, 21); color: white">
+        {% for message in messages %}
+        <li>{{ message }}</li>
         {% endfor %}
-       </ul>
-    {% endif%}
+        </ul>
+    {% endif %}
+    {% endwith %}
+        <h2>Welcome, {{club['email']}} </h2><a href="{{url_for('logout')}}">Logout</a>
     Points available: {{club['points']}}
     <h3>Competitions:</h3>
     <ul>
@@ -27,10 +27,23 @@
             <a href="{{ url_for('book',competition=comp['name'],club=club['name']) }}">Book Places</a>
             {%endif%}
         </li>
+
+
         <hr />
         {% endfor %}
     </ul>
-    {%endwith%}
 
+    <h3>Competitions:</h3>
+    <ul>
+        {% for cl in all_clubs %}
+        
+        <li>
+            {{cl['name']}}<br />
+            Number of point: {{ cl['points']}}
+        </li>
+        
+        <hr />
+        {% endfor %}
+</ul>
 </body>
 </html>
